@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Don't write file if __DATA__ hasn't changed (gh#2)
 
 0.01      2024-12-03 17:15:21 -0700
   - initial version
